fixed navbar and logo and paragraph spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 .navbar-default {
 	background-color: transparent;
 	border: none;
+	position: fixed;
 }
 
 .carousel-inner>.item>a>img, .carousel-inner>.item>img {
@@ -12,11 +13,20 @@
 	width: 100vw;
 }
 
+.carousel-inner .carousel-caption img {
+	max-height: 400px;
+	max-width: 400px;
+	margin-bottom: 100px;
+}
+
 #story h1 {
 	color: #F15A24;
 	font-family: 'Lobster', cursive;
 	font-size: 80px;
 	text-shadow: 1px 1px 5px #000;
+	margin-bottom: 0;
+	padding-top: 35%;
+
 }
 
 #story h3 {
@@ -24,5 +34,10 @@
 	font-weight: 700;
 	font-size: 26px;
 	margin-top: 0;
-	margin-bottom: 0;
+}
+
+.col-sm-6 p {
+	padding-top: 200px;
+	text-align: justify;
+	display: block;
 }
